overflow fix for twin dropdown

--- a/src/Components/ADT3DSceneBuilder/ADT3DSceneBuilder.scss
+++ b/src/Components/ADT3DSceneBuilder/ADT3DSceneBuilder.scss
@@ -85,6 +85,25 @@
         color: var(--cb-color-theme-primary);
         margin-left: -10px;
     }
+
+    .cb-search-autocomplete-container {
+        position: inherit !important;
+    }
+
+    /* stylelint-disable selector-class-pattern */
+    .cb-search-autocomplete__menu {
+        max-height: calc(100% - 63px);
+        top: 62px;
+
+        > div:first-child {
+            height: 100%;
+        }
+    }
+
+    .cb-search-autocomplete__menu-list {
+        height: 100%;
+    }
+    /* stylelint-enable selector-class-pattern */
 }
 
 .cb-widget-dialog-search-box {
